# ray_tracing

./: .gitignore  MODULE.bazel
camera/: BUILD.bazel  camera.cpp  camera.h
common/: BUILD.bazel  common.h  constants.h
hittable/: BUILD.bazel  hittable.h
hittable/hittable_list/: BUILD.bazel  hittable_list.cpp  hittable_list.h  hittable_list_test.cpp
hittable/sphere/: BUILD.bazel  sphere.cpp  sphere.h  sphere_test.cpp
interval/: BUILD.bazel  interval.cpp  interval.h  interval_test.cpp
ppm_encoder/: BUILD.bazel  basic_ppm_generator.cpp
ppm_renderer/: BUILD.bazel
ray/: BUILD.bazel  ray.cpp  ray.h  ray_test.cpp
ray_tracer/: BUILD.bazel  ray_tracer.cpp
vec3/: BUILD.bazel  color.cpp  color.h  vec3.cpp  vec3.h  vec3_test.cpp
