load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "common",
    hdrs = [
        "common.h",
    ],
    deps = [
        "//vec3",
        "//vec3:color",
        "//ray",
        ":constants",
        "//interval",
    ],
    visibility = [
        "//visibility:public",
    ],
)

cc_library(
    name = "constants",
    hdrs = [
        "constants.h",
    ],
    visibility = [
        "//visibility:public",
    ],
)